--- a/index.html
+++ b/index.html
@@ -5,6 +5,27 @@
     <title></title>
   </head>
   <body>
+    <header>
+      <nav class="header-elements">
+        <div class="header-element">О себе</div>
+        <div class="header-element">Навыки</div>
+        <div class="header-element">Контакты</div>
+      </nav>
+    </header>
+    <main>
+      <div class="about-container">
+        <div class="about">
+          <div class="about-header">Азимжон Шодиев</div>
+          <div class="about-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere voluptate aperiam obcaecati, repellat atque, libero cupiditate molestiae delectus, dicta eveniet autem sit quis placeat adipisci. Culpa voluptatum dicta fugit accusamus?
+          Reprehenderit accusantium obcaecati quas ratione praesentium eos qui commodi, aut nesciunt id esse at doloribus facilis laudantium quisquam amet incidunt illo? Voluptatem rem ea fuga, tempore eius quaerat possimus ab.
+          Maiores doloremque quod earum molestias, omnis cumque fugiat tempore corrupti architecto assumenda sit veniam facilis corporis, enim iste nisi eligendi aut! Eligendi, deleniti quia! Laboriosam aliquid provident enim est ab.
+          Porro, blanditiis dolorum? Saepe soluta aliquam atque ut nemo est expedita dicta, dolore voluptas voluptatem odio, facere excepturi autem laudantium nihil provident ullam, optio omnis. Fugit mollitia quod cupiditate ut?
+          Suscipit accusamus asperiores qui doloribus adipisci sapiente, tempore aperiam quibusdam nisi! Nam ipsam cum, neque, commodi error distinctio odit modi facilis minima cupiditate impedit aspernatur ipsa autem corrupti doloremque id!</div>
+        </div>
+        <img src="portreit.jpg" alt="portreit" class="about-img">
+      </div>
+    </main>
+    <footer></footer>
     <script src="anime.min.js"></script>
   </body>
 </html>
